# design3

./: CMakeLists.txt  README.md  build.sh  colors.json  design3team12.cmake  run_cxx_tests.sh  test_metaTestCountry.py
atlasCountryFlag/acceptanceTest/: test_acceptanceFlagInformationSeeker.py  test_flagInformationProvider.py  test_flagRepositoryFiller.py
atlasCountryFlag/flagData/: new_country_json.json
atlasCountryFlag/flagDomain/: flag.py  flagRepository.py
atlasCountryFlag/flagPersistance/: flagRepositoryFiller.py  flagRepositroyDB.py
atlasCountryFlag/flagResource/: flagInformationProvider.py
atlasCountryFlag/flagService/: flagInformationSeeker.py
atlasCountryFlag/unitTest/: test_flag.py  test_flagInformationSeeker.py  test_flagRepositoryDB.py  test_flagSeeker.py
config/: colors.json
elasticsearch/logs/: elasticsearch.log.2015-03-21  elasticsearch.log.2015-03-22  elasticsearch.log.2015-03-23  elasticsearch.log.2015-03-24  elasticsearch.log.2015-03-25  elasticsearch.log.2015-03-26  elasticsearch.log.2015-03-27  elasticsearch.log.2015-03-28  elasticsearch.log.2015-03-31  elasticsearch.log.2015-04-01  elasticsearch.log.2015-04-02
include/ai/: BadAnswerException.h  CubePositionFinder.h  CubeRelativePosition.h  FlagCompletedException.h  ImageAngleGetter.h  Interfaces.h  JourneyBackPack.h  JourneyScheduler.h  JourneyState.h  JourneyStateFactory.h  JourneyStates.h  PathPlanner.h  RobotPose.h  ai.h
include/common/: CountryToColorLister.h  Exception.h  ExitGuard.h  JanssonException.h  LEDMatrixOrderList.h  NonBlockIfStream.h  Popener.h  SIGINTHandler.h  SignalFunctor.h  SystemCaller.h  common.h  commonEssentials.h  sleep_nano_seconds.h
include/driver/: CameraCapturer.h  CameraCapturerException.h  CameraPoseHandler.h  LEDMatrixController.h  MicroControllerCommand.h  MicroControllerCommandBuilder.h  MicroControllerCommandPort.h  MotorController.h  Prehensor.h  ServoMotorController.h  ServoMotorControllerFactory.h  driver.h  kiki_image_types.h  kiki_v4l2_api.h
include/rest/: AtlasJSONDecoder.h  CURLException.h  CURLGetter.h  curl_output.h  rest.h
include/vision/: BadColorStringException.h  BitmapFormatException.h  BlackCubeDetector.h  CenterTargetParameters.h  Color.h  ColorFilter.h  ColorJSONLoader.h  ColorPalette.h  ColoredCubeDetector.h  CubeCenterTargeter.h  CubeDetector.h  CubeDetectorFactory.h  CubeTopTargeter.h  ImageAngleAdjuster.h  ImageCapturer.h  IncrementalRect.h  NoCubeFoundException.h  vision.h  (+4 more)
naturalLanguagePython/: __main__.py
questionAnalyserNLTK/: questionTokenizer.py  questionsList1.txt
ros/d3_color_detector/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ros/d3_color_detector/config/: colors.json
ros/d3_color_detector/launch/: color_detector.launch
ros/d3_color_detector/src/: color_detector.cc
ros/d3_gui/: CMakeLists.txt  flags.json  package.xml
ros/d3_gui/flags/: Flag_AfriqueSud.fig  Flag_Albanie.fig  Flag_Algerie.fig  Flag_Allemagne.fig  Flag_Andorre.fig  Flag_Arabie-Saoudite.fig  Flag_Argentine.fig  Flag_Australie.fig  Flag_Azerbaidjan.fig  Flag_Bahamas.fig  Flag_Bahrein.fig  Flag_Bangladesh.fig  Flag_Barbade.fig  Flag_Belarusse.fig  Flag_Belize.fig  Flag_Bhoutan.fig  Flag_Bolivie.fig  Flag_Bosnie.fig  Flag_Botswana.fig  Flag_Bresil.fig  Flag_Bulgarie.fig  Flag_Burkina.fig  Flag_Burundi.fig  Flag_Cambodge.fig  Flag_Cameroun.fig  Flag_Canada.fig  Flag_Cap-Vert.fig  Flag_Chili.fig  Flag_Chine.fig  Flag_Chypre.fig  Flag_Colombie.fig  Flag_Comores.fig  Flag_Congo.fig  Flag_CongoRD.fig  Flag_CoreeN.fig  Flag_Danemark.fig  Flag_Dominique.fig  Flag_ElSalvador.fig  Flag_EmiratsArabesUnis.fig  Flag_Equateur.fig  (+95 more)
ros/d3_gui/include/: QmlApplicationViewer.h  RosQtExitGuard.h
ros/d3_gui/launch/: d3_gui.launch
ros/d3_gui/qml/: kikiantoine.qml  main.qml  maingui.qml
ros/d3_gui/src/: QmlApplicationViewer.cc  RosQtExitGuard.cc  base_station_gui.cc
ros/d3_journey/: CMakeLists.txt  package.xml
ros/d3_journey/src/: journey.cc
ros/d3_remote/: CMakeLists.txt  package.xml
ros/d3_remote/src/: remote.cc
ros/d3_robot_cam_broadcaster/: CMakeLists.txt  package.xml
ros/d3_robot_cam_broadcaster/src/: robot_cam_broadcaster.cc
ros/d3_table_transform/: CMakeLists.txt  package.xml
ros/d3_table_transform/include/: RosExitGuard.h  TfPublisher.h
ros/d3_table_transform/launch/: d3_table_transform.launch
ros/d3_table_transform/msg/: robotPoseArray.msg
ros/d3_table_transform/src/: RosExitGuard.cc  TfPublisher.cc  robot_center_broadcaster.cc  robot_positioner.cc  table_origin_broadcaster.cc
samples/: CMakeLists.txt  CMakeLists.txt~  atlas_asker.cc  capture_frame.cc  color_detector.cc  cube_targeter.cc  detect_color.cc  detect_color_live.cc  detect_cube.cc  harris.cc  ledSample.cc  motor_adjust.cc  sample_squares.cc  serial_populu.cc  shared_ptr_howto.cc
src/: CMakeLists.txt
src/driver/: CMakeLists.txt  CameraCapturer.cc  CameraPoseHandler.cc  LEDMatrixController.cc  MicroControllerCommandBuilder.cc  MicroControllerCommandPort.cc  MotorController.cc  Prehensor.cc  ServoMotorController.cc  ServoMotorControllerFactory.cc  kiki_v4l2_mmap_capture.c  yuv422_to_bgr888.c  yuv422_to_rgb888.c
src/vision/: BlackCubeDetector.cc  CMakeLists.txt  Color.cc  ColorFilter.cc  ColorJSONLoader.cc  ColorPalette.cc  ColoredCubeDetector.cc  CubeCenterTargeter.cc  CubeDetector.cc  CubeDetectorFactory.cc  CubeTopTargeter.cc  IncrementalRect.cc  RedCubeDetector.cc  SquareFilter.cc  WhiteCubeDetector.cc
test/: AtlasJSONDecoderTest.cc  CMakeLists.txt  CURLGetterTest.cc  ColorJSONLoaderTest.cc  ColorPaletteTest.cc  ColoredCubeDetectorTest.cc  CubeCenterTargeterTest.cc  CubePositionFinderTest.cc  IncrementalRectTest.cc  JourneySchedulerTest.cc  JourneyStatesTest.cc  LEDMatrixControllerTest.cc  MicroControllerCommandBuilderTest.cc  NonBlockIfStreamTest.cc  ServoMotorControllerTest.cc  SleepNanoSecondsTest.cc  dummyWriter.cc
test/include/: CubeDetectorTester.h  testEssentials.h
test/mocks/: ColorPaletteMock.h  CubeDetectorMock.h  ImageAngleAdjusterMock.h  ImageAngleGetterMock.h
test/test_jsons/: colors.json  nofieldcolors.json  onecolor.json
(+670 files in other folders)
